Fixed test on phone book and code to pass tests.